# voice-input-method

./: KDE_Wayland.py  Qt_ONNX.py  Qt_ONNX_F6.py  Qt_ONNX_key.py  Qt_ONNX_windows.py  Qt_ONNX_windows_style.py  README.md  RTX-IM.sh  config.yaml  model_export.py  pyproject.toml  qt.py  requirements.txt  style.css  windows_style.py
RTXIME/: Rtxime.py  Rtxime_Wayland.py  library.txt  model_export.py  rime_ice2hotwords.py  win_requirements.txt
for_2k_screen/: Qt_ONNX_windows_style.py  style.css
macos/: Info.plist  build.sh  entitlements.plist
other/: Qt_ONNX.py  Qt_ONNX_key.py  qt.py
tools/: rime_ice2hotwords.py
voice_input_method/: __init__.py  __main__.py  app.py  audio.py  config.py  hotwords.py  recognition.py  text_processing.py
voice_input_method/platform/: __init__.py  base.py  macos.py  wayland.py  windows.py  x11.py
voice_input_method/resources/: hotwords.txt
